# pretty-useful-scripts

./: .gitignore  README.md  install_apps.sh  install_devtools.sh  old_stay_fresh.sh  stay_fresh.sh  zsh_aliases.zsh
git/: README.md  gacp.sh  git_aliases.zsh  git_amend_last.sh  git_cleanup_merged.sh  git_diff_branch.sh  git_recent_branches.sh  git_repo_root.sh  git_status_summary.sh  git_sync_default.sh  git_undo_last_commit.sh  git_whoami.sh  set_git_profile.sh
k8s-toolbox/: Dockerfile  README.md  build.sh  run.sh
macos-initial-setup/: Brewfile.example  README.md  stay_fresh.sh  v1_stay_fresh.sh  workstation_doctor.sh  zsh_aliases.zsh
mikrotik/: README.md  backup.lua  backup_file_cleanup.lua  bandwidth_spike.lua  brute_force_block.lua  cert_expiry_watch.lua  change_WIFI_pw.lua  ddns_update.lua  detect_internet.lua  dhcp_lease_watch.lua  firewall_drift.lua  firewall_drift_baseline.lua  health_check.lua  latency_monitor.lua  mac_allowlist_dhcp.lua  netwatch_notify.lua  pull_router_backups.sh  reboot-and-flush.lua  rogue_dns_check.lua  tg_send.lua  traffic_quota.lua  update_check.lua  vpn_health.lua  wan_failover_notify.lua  wan_link_flap_notify.lua  wireguard_watch.lua  wireless_client_watch.lua
test-env/: README.md
test-env/python/: .dockerignore  README.md  justfile  pyproject.toml  run.sh
test-env/python/.devcontainer/: devcontainer.json
test-env/python/docker/: Dockerfile  docker-compose.yml
test-env/python/src/sample/: __init__.py
test-env/python/src/sample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test-env/python/tests/: test_sample.py
(+54 files in other folders)
